# Building-my-own-Tiny-OpenClaw

./: .env.example  .gitignore  Dockerfile  README.md  SOUL.md  agent_runtime.py  context_builder.py  docker-compose.yml  logger.py  main.py  make_skill.py  memory.py  pyproject.toml  session_manager.py  skill_loader.py  telegram_channel.py
skills/browser_use/: SKILL.md  handler.py
skills/calculator/: SKILL.md  handler.py
skills/datetime/: SKILL.md  handler.py
skills/file_ops/: SKILL.md  handler.py
skills/memory_work/: SKILL.md  handler.py
skills/reminder/: SKILL.md  handler.py
skills/weather/: SKILL.md  handler.py
skills/web_search/: SKILL.md  handler.py
tests/: test_calculator.py  test_context_builder.py  test_memory.py  test_session_manager.py  test_skill_loader.py
