[project]
name = "building-my-own-tiny-openclaw"
version = "0.1.0"
description = "A minimal autonomous AI agent inspired by OpenClaw — runs locally, talks via Telegram, uses tools via a skill plugin system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=21.0",
    "playwright>=1.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
